--- a/pages/login.html
+++ b/pages/login.html
@@ -9,9 +9,9 @@
     </script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%2322c55e' width='100' height='100' rx='20'/><text y='70' font-size='60' fill='white' text-anchor='middle' x='50' font-weight='bold'>$</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="css/app.css">
-    <script src="js/app-utils.js"></script>
-    <script src="js/ui-utils.js"></script>
+    <link rel="stylesheet" href="../assets/css/app.css">
+    <script src="../assets/js/app-utils.js"></script>
+    <script src="../assets/js/ui-utils.js"></script>
     
     <!-- Firebase SDK -->
     <script type="module">
@@ -44,7 +44,7 @@
         window.firebaseAuthStateChanged = onAuthStateChanged;
     </script>
     
-    <!-- Styles moved to css/app.css -->
+    <!-- Styles moved to ../assets/css/app.css -->
 </head>
 <body class="page-login min-h-screen bg-gray-50 flex items-center justify-center">
     <div id="appLoading" class="app-loading-overlay">
@@ -119,7 +119,7 @@
                     const userData = users.find(u => u.email && u.email.toLowerCase() === user.email.toLowerCase());
                     if (userData) {
                         localStorage.setItem('currentUser', JSON.stringify({ email: userData.email, role: userData.role }));
-                        window.location.replace(userData.role === 'admin' ? 'admin.html' : 'index.html');
+                        window.location.replace(userData.role === 'admin' ? 'admin.html' : '../index.html');
                     }
                 }
             });
@@ -153,7 +153,7 @@
                         localStorage.setItem('currentUser', JSON.stringify({ email: userData.email, role: userData.role }));
                         showToast('Inicio de sesion exitoso.', 'success', 1400);
                         setTimeout(() => {
-                            window.location.replace(userData.role === 'admin' ? 'admin.html' : 'index.html');
+                            window.location.replace(userData.role === 'admin' ? 'admin.html' : '../index.html');
                         }, 350);
                     } else {
                         errorMessage.textContent = 'Usuario autenticado, pero sin rol asignado en la base de datos.';
@@ -194,6 +194,6 @@
 
         initAuthFlow();
     </script>
-    <script src="js/anti-inspection.js"></script>
+    <script src="../assets/js/anti-inspection.js"></script>
 </body>
 </html>
