--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facturación</title>
+    <script>
+        (function () {
+            try {
+                var savedMode = localStorage.getItem('darkMode');
+                var useDark = savedMode === '1' || savedMode === 'true';
+                if (savedMode === null && window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                    useDark = true;
+                }
+                document.documentElement.classList.toggle('dark-mode', !!useDark);
+            } catch (_) {}
+        })();
+    </script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%2322c55e' width='100' height='100' rx='20'/><text y='70' font-size='60' fill='white' text-anchor='middle' x='50' font-weight='bold'>$</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assets/css/app.css">
@@ -228,12 +240,6 @@
                             <span class="invoice-total-label text-sm font-semibold text-gray-700 uppercase mr-2">Total</span>
                             <span class="invoice-total-amount text-lg font-bold text-gray-900">$ <span id="totalAmount">0.00</span></span>
                         </div>
-                    </div>
-
-                    <!-- Footer -->
-                    <div class="invoice-footer grid grid-cols-2 gap-8 mb-8 text-xs text-gray-500 uppercase tracking-wide">
-                        <div>No se admiten devoluciones</div>
-                        <div class="text-right">Recibido por <span class="invoice-footer-signature inline-block border-b border-gray-400 w-32 ml-2"></span></div>
                     </div>
 
                     <!-- Botones -->
