--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin - Usuarios</title>
+    <script>
+        (function () {
+            try {
+                var savedMode = localStorage.getItem('darkMode');
+                var useDark = savedMode === '1' || savedMode === 'true';
+                if (savedMode === null && window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                    useDark = true;
+                }
+                document.documentElement.classList.toggle('dark-mode', !!useDark);
+            } catch (_) {}
+        })();
+    </script>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%2322c55e' width='100' height='100' rx='20'/><text y='70' font-size='60' fill='white' text-anchor='middle' x='50' font-weight='bold'>$</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../assets/css/app.css">
