--- a/pages/admin.html
+++ b/pages/admin.html
@@ -173,7 +173,9 @@
     <script src="../assets/js/admin/config.js"></script>
     <script src="../assets/js/admin/data.js"></script>
     <script src="../assets/js/admin/auth.js"></script>
-    <script src="../assets/js/admin/ui.js"></script>
+    <script src="../assets/js/admin/users-table-render.js"></script>
+    <script src="../assets/js/admin/users-dialogs.js"></script>
+    <script src="../assets/js/admin/users-events.js"></script>
     <script src="../assets/js/anti-inspection.js"></script>
 </body>
 </html>
