fix de carga de usuarios (no listaba los usuarios)

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -170,12 +170,7 @@
         </div>
     </main>
 
-    <script src="../assets/js/admin/config.js"></script>
-    <script src="../assets/js/admin/data.js"></script>
-    <script src="../assets/js/admin/auth.js"></script>
-    <script src="../assets/js/admin/users-table-render.js"></script>
-    <script src="../assets/js/admin/users-dialogs.js"></script>
-    <script src="../assets/js/admin/users-events.js"></script>
+    <script src="../assets/js/admin/main.js"></script>
     <script src="../assets/js/anti-inspection.js"></script>
 </body>
 </html>
