perf(ui): agrega skeleton screens, lazy loading y cache con service worker

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <script src="assets/js/core/toast-utils.js"></script>
     <script src="assets/js/core/status-utils.js"></script>
     <script src="assets/js/core/list-utils.js"></script>
+    <script src="assets/js/core/performance-utils.js"></script>
+    <script src="assets/js/core/sw-register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
     
