--- a/pages/admin.html
+++ b/pages/admin.html
@@ -28,6 +28,8 @@
     <script src="../assets/js/core/toast-utils.js"></script>
     <script src="../assets/js/core/status-utils.js"></script>
     <script src="../assets/js/core/list-utils.js"></script>
+    <script src="../assets/js/core/performance-utils.js"></script>
+    <script src="../assets/js/core/sw-register.js"></script>
     
     <!-- Firebase SDK -->
     <script type="module">
